// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> ActionType story renders snapshot 1`] = `
<div
  class="css-1hskriy e1hhae2w0"
>
  <li
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters e1dwhbdn0 css-13frvx0-MuiButtonBase-root-MuiMenuItem-root"
    data-testid="MenuItem"
    name="Text here"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="css-y3sjyp e1dwhbdn1"
    >
      <span
        class="primary-text css-1831mf5 e1dwhbdn2"
      >
        Text here
      </span>
      <span
        class="css-z6j8xt e1dwhbdn4"
      >
        123,456
      </span>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </li>
</div>
`;

exports[`<MenuItem /> Default story renders snapshot 1`] = `
<div
  class="css-1hskriy e1hhae2w0"
>
  <li
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters e1dwhbdn0 css-13frvx0-MuiButtonBase-root-MuiMenuItem-root"
    data-testid="MenuItem"
    name="Text here"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="css-zv3iyt e1dwhbdn5"
    >
      <svg
        class="css-oa0rwb e1dwhbdn7"
        fill="currentColor"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="6"
          cy="6"
          r="2"
        />
      </svg>
    </span>
    <span
      class="css-y3sjyp e1dwhbdn1"
    >
      <span
        class="primary-text css-1831mf5 e1dwhbdn2"
      >
        Text here
      </span>
      <span
        class="css-z6j8xt e1dwhbdn4"
      >
        123,456
      </span>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </li>
</div>
`;
